# AudioFX

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  autotune_8h_source.html  bell_8h_source.html  biquad_8h_source.html  class_a_f_x-members.html  class_a_f_x.html  class_a_f_x.js  class_audio_file-members.html  class_audio_file.html  class_autotune-members.html  class_autotune.html  class_autotune.js  class_bell_filter-members.html  class_bell_filter.html  class_bell_filter.js  class_biquad-members.html  class_biquad.html  class_biquad.js  class_e_q-members.html  class_e_q.html  class_e_q.js  class_f_f_t-members.html  class_f_f_t.html  class_f_f_t.js  class_file_handler-members.html  class_file_handler.html  class_file_handler.js  class_filter-members.html  class_filter.html  class_filter.js  class_high_pass-members.html  class_high_pass.html  (+48 more)
.github/workflows/: cmake-multi-platform.yml  generate-docs.yml
cmake/: afxConfig.cmake.in  copy-assets.cmake  fxaudioConfig.cmake.in
include/: afx.h  autotune.h  convreverb.h  eq.h  fft.h  filehandler.h  fxaudio.h  params.h  tempo.h  timestretch.h  utils.h
include/filters/: bell.h  biquad.h  filter.h  hp.h  hs.h  lp.h  ls.h
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js
src/: autotune.cpp  autotune.h  main.cpp  utils.cpp
src/effects/: afx.cpp  autotune.cpp  autotune.h  convreverb.cpp  eq.cpp  eq.h  fft.cpp  fft.h  filehandler.cpp  filehandler.h  fxaudio.cpp  params.h  pitchShift.cpp  pitchshift.h  reverb.cpp  reverb.h  reverse.cpp  separate.py  tempo.cpp  timeshift.h  timestretch.cpp  utils.cpp  utils.h  vocoder.h
src/effects/filters/: bell.cpp  biquad.cpp  filter.h  hp.cpp  hp.h  hs.cpp  lp.cpp  ls.cpp  median.cpp
src/headers/: afx.h  autotune.h  convreverb.h  eq.h  fft.h  filehandler.h  params.h  pitchshift.h  reverb.h  reverse.h  tempo.h  timestretch.h  utils.h  vocoder.h
src/headers/filters/: bell.h  biquad.h  bp.h  filter.h  hp.h  hs.h  lp.h  ls.h  median.h
tests/: autotune-tests.cpp  eq-tests.cpp  filehandler-tests.cpp  fxaudio-tests.cpp  utils-tests.cpp
